--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                         <a href="#page-top"></a>
                     </li>
                     <li>
-                        <a href="#">Welcome</a>
+                        <a href="welcome-page.php">Welcome</a>
                     </li>
                     <li>
                         <a href="#">Register as an investor</a>
